// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getQueryConfig with archivist when request can access archive generates config for multi-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "a1df01bbdaa05f2294cdd6fbd92aace3086fe408",
          "e8cae43b8ef15e6e2166b7560b2df802ac28fe53",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for nested-signed multi-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "a1df01bbdaa05f2294cdd6fbd92aace3086fe408",
          "e8cae43b8ef15e6e2166b7560b2df802ac28fe53",
        ],
        [
          "ee84477649f67bcda3c604ad361313bdd9976c0f",
        ],
        [
          "4c3e913823664e68ce252e256b8c442172dbec4a",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for nested-signed requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "a1df01bbdaa05f2294cdd6fbd92aace3086fe408",
          "e8cae43b8ef15e6e2166b7560b2df802ac28fe53",
        ],
        [
          "ee84477649f67bcda3c604ad361313bdd9976c0f",
          "4c3e913823664e68ce252e256b8c442172dbec4a",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for single-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "a1df01bbdaa05f2294cdd6fbd92aace3086fe408",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for unsigned requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {},
  },
}
`;

exports[`getQueryConfig with module generates query config for current query 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "2f96524605167dcfe6e31007d05ebfa85bb2dc32",
        ],
      ],
    },
  },
}
`;
